--- a/service.html
+++ b/service.html
@@ -141,18 +141,20 @@
                    <h3 class="text-white mw-100">A Delivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey.</h3>
                 </div>
                 <div class="row pt-4 gy-4">
-                    <div class="col-md-4 d-flex" id="service1">
-                        <div class="our-service" data-popup="popup-1">
-                            <div class="arrow" >
-                                <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
-                                    <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
-                                    <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
-                                </svg>  
-                            </div>
-                            <h4>Device Driver Development</h4>
-                            <p>Our expertise in device driver development ensures seamless interaction between hardware and software components.</p>
+                    <div class="col-md-4 d-flex">
+                        <div class="our-service"  id="service1">
+                            <div class="div"  data-popup="popup-1">
+                                <div class="arrow" >
+                                    <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
+                                        <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
+                                        <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
+                                    </svg>  
+                                </div>
+                             <h4>Device Driver Development</h4>
+                             <p>Our expertise in device driver development ensures seamless interaction between hardware and software components.</p>
                         </div>
+                    </div>
                         <div class="popup-overlay" id="popup-1">
                             <div class="popup-content container">
                                 <span class="close-btn">&times;</span>
@@ -179,17 +181,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 d-flex" id="service2">
-                        <div class="our-service px-md-5" data-popup="popup-2" >
-                            <div class="arrow" >
-                                <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
-                                    <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
-                                    <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
-                                </svg>   
+                    <div class="col-md-8 d-flex">
+                        <div class="our-service px-md-5"  id="service2">
+                            <div class="div"  data-popup="popup-2">
+                                <div class="arrow" >
+                                    <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
+                                        <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
+                                        <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
+                                    </svg>   
+                                </div>
+                                <h4>Cross-Platform Application Development</h4>
+                                <p> We specialize in crafting desktop and Windows applications tailored to your exact needs. Our solutions are secure, scalable, and seamlessly integrate with your existing systems to drive business success. </p>
+                        
                             </div>
-                            <h4>Cross-Platform Application Development</h4>
-                            <p> We specialize in crafting desktop and Windows applications tailored to your exact needs. Our solutions are secure, scalable, and seamlessly integrate with your existing systems to drive business success. </p>
                         </div>
                         <div class="popup-overlay" id="popup-2">
                             <div class="popup-content container">
@@ -224,19 +229,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 d-flex" id="service3">
-                        <div class="our-service px-md-5" data-popup="popup-3">
-                            <div class="arrow" data-popup="popup-3">
-                                <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
-                                    <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
-                                    <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
-                                </svg>    
-                            </div>
-                            <h4>Firmware/IoT Development</h4>
-                            <p>We specialize in crafting tailored firmware solutions that align with your 
+                    <div class="col-md-8 d-flex" >
+                        <div class="our-service px-md-5" id="service3">
+                            <div class="div"  data-popup="popup-3">
+                                <div class="arrow" data-popup="popup-3">
+                                    <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
+                                        <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
+                                        <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
+                                    </svg>    
+                                </div>
+                                <h4>Firmware/IoT Development</h4>
+                                <p>We specialize in crafting tailored firmware solutions that align with your 
                                 hardware needs. Our services include custom board support, application-specific programming, and robust protocol component development for seamless hardware communication. We optimize firmware memory architecture to fit 
                                 within chipset constraints, ensuring efficiency and speed.</p>
+                            </div>
                         </div>
                         <div class="popup-overlay" id="popup-3">
                             <div class="popup-content container">
@@ -270,17 +277,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex" id="service4">
-                        <div class="our-service" data-popup="popup-4">
-                            <div class="arrow">
-                                <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
-                                    <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
-                                    <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
-                                </svg>  
-                            </div>
-                            <h4>Mobile Application Development</h4>
-                            <p>Stand out in today’s competitive market with our all-encompassing mobile application development services. </p>
+                    <div class="col-md-4 d-flex" >
+                        <div class="our-service" id="service4">
+                            <div class="div"  data-popup="popup-4">
+                                <div class="arrow">
+                                    <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
+                                        <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
+                                        <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
+                                    </svg>  
+                                </div>
+                                <h4>Mobile Application Development</h4>
+                                <p>Stand out in today’s competitive market with our all-encompassing mobile application development services. </p>
+                         </div>
                         </div>
                         <div class="popup-overlay" id="popup-4">
                             <div class="popup-content container">
