--- a/home.html
+++ b/home.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
+   
 </head>
-<body>
+<body class="home-page">
     <header class="site-header" id="mainHeader">
         <div class="container d-flex justify-content-between align-items-center">
           <div class="logo">
@@ -267,7 +268,7 @@
                 </div>
                 <div class="row service-sec pt-5">
                     <div class="col-md-6 pe-lg-5">
-                        <a href="http://13.53.42.103/indilogic/service.html#service1">
+                        <a href="service.html#service1">
                             <div class="service" id="Development1">
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
