--- a/home.html
+++ b/home.html
@@ -268,7 +268,7 @@
                 </div>
                 <div class="row service-sec pt-5">
                     <div class="col-md-6 pe-lg-5">
-                        <a href="service.html#service1">
+                        <a href="service.html#service1" class="service-link">
                             <div class="service" id="Development1">
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
@@ -279,7 +279,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <a href="http://13.53.42.103/indilogic/service.html#service2">
+                        <a href="service.html#service2" class="service-link">
                             <div class="service" id="Development2">
                                 <img src="image/service-2.png" class="w-100">
                                 <div class="slide-up">
@@ -292,7 +292,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 pe-lg-5">
-                        <a href="http://13.53.42.103/indilogic/service.html#service3">
+                        <a href="service.html#service3" class="service-link">
                             <div class="service" id="Development3">
                                 <img src="image/service-3.png" class="w-100">
                                 <div class="slide-up">
@@ -303,7 +303,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <a href="http://13.53.42.103/indilogic/service.html#service4">
+                        <a href="service.html#service4" class="service-link">
                             <div class="service" id="Development4">
                                 <img src="image/service-4.png" class="w-100">
                                 <div class="slide-up">
