--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
         <section class="achievement">
             <div class="container text-center">
                 <h2>OUR ACHIEVEMENT</h2>
-                <p>At IndiLogic, we bring over 15 years of expertise in delivering top-quality products. that consistently exceed industry expectations. As a trusted strategic partner with Dell Technologies, we have successfully launched innovative products now used by over 16 million users worldwide. This collaboration highlights our relentless pursuit of excellence and our proven ability to scale impactful solutions that meet the ever-evolving needs of the global market.</p>
+                <p>At IndiLogic, we bring over 15 years of expertise in delivering top-quality products that consistently exceed industry expectations. As a trusted strategic partner with Dell Technologies, we have successfully launched innovative products now used by over 16 million users worldwide. This collaboration highlights our relentless pursuit of excellence and our proven ability to scale impactful solutions that meet the ever-evolving needs of the global market.</p>
             </div>
         </section>
 
