--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="common-title pb-3 text-white">
                     <h4>LOCATION</h4>
-                    <h3 class="text-white mw-100">IndiLogic LLC is headquartered in the USA <br>with a development center located in India.</h3>
+                    <h3 class="text-white mw-100">IndiLogic is headquartered in the USA <br>with a development center located in India.</h3>
                 </div>
                 <div class="row pt-2">
                     <div class="col-lg-6 pe-md-5">
