--- a/service.html
+++ b/service.html
@@ -41,7 +41,7 @@
         <section class="inner-banner-sec service">
             <div class="container text-center">
                 <h1 class="common-heading">We embrace Agile methodologies within our organization, consistently striving to enhance process efficiency and effectiveness.</h1>
-                <img src="./image/service.png" class="mt-md-3 mt-4 w-100">
+                <img src="./image/service.jpg" class="mt-md-3 mt-4 w-100">
             </div>
         </section>
         <section class="service-sec">
@@ -273,7 +273,7 @@
                                     <p>Stand out in today’s competitive market with our all-encompassing mobile application development services. </p>
                             </div>
                             </div>
-                            <div class="popup-overlay" id="popup-4">
+                            <div class="popup-overlay popup" id="popup-4">
                                 <div class="popup-content container">
                                     <span class="close-btn">&times;</span>
                                     <h4>Mobile Application Development</h4>
