--- a/home.html
+++ b/home.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="row service-sec pt-5">
                     <div class="col-md-6 pe-lg-5">
-                        <a href="service.html#our-service-sec" class="service-link">
+                        <a href="service.html?popup=popup-1" data-popup="popup-4" class="service-link">
                             <div class="service" id="Development1">
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
@@ -288,7 +288,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <a href="service.html#our-service-sec" class="service-link">
+                        <a href="service.html?popup=popup-2" class="service-link">
                             <div class="service" id="Development2">
                                 <img src="image/service-2.png" class="w-100">
                                 <div class="slide-up">
@@ -301,7 +301,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 pe-lg-5">
-                        <a href="service.html#our-service-sec" class="service-link">
+                        <a href="service.html?popup=popup-3" class="service-link">
                             <div class="service" id="Development3">
                                 <img src="image/service-3.png" class="w-100">
                                 <div class="slide-up">
@@ -312,7 +312,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <a href="service.html#our-service-sec" class="service-link">
+                        <a href="service.html?popup=popup-4" class="service-link">
                             <div class="service" id="Development4">
                                 <img src="image/service-4.png" class="w-100">
                                 <div class="slide-up">
